--- a/VideoAnalyze2/build.gradle
+++ b/VideoAnalyze2/build.gradle
@@ -4,8 +4,9 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.example'
+group = 'hello'
 version = '0.0.1-SNAPSHOT'
+description = 'VideoAnalyze2'
 
 java {
     toolchain {
@@ -23,13 +24,23 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // gemini
+    implementation "com.google.genai:google-genai:1.12.0"
+
+    // gcs
+    implementation "com.google.cloud:google-cloud-storage:2.38.0"
+
+    // oauth
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'
+    implementation 'com.google.api:api-common:2.13.0'
 }
 
 tasks.named('test') {
