--- a/LIV-SI_MINSEO/src/main/resources/application.yml
+++ b/LIV-SI_MINSEO/src/main/resources/application.yml
@@ -36,9 +36,4 @@ gemini:
     <출력 예시> {"concept": "죽이 아플 때만 먹는 음식이라고? 편견을 깨부수는 세상의 모든 죽이 여기에!", "scenes":[{"sceneNumber":1, "originalTimestamp":"0:15-0:20", "content": "이런 죽 본 적 있어?"},{"sceneNumber": 2,"originalTimestamp":"0:08-0:13","content": "속 편한 보양죽부터 든든한 식사죽까지"},{sceneNumber": 3, "originalTimestamp": "0:05-0:10", "content": "정기운 백련죽집"}, {"sceneNumber": 4,"originalTimestamp": "0:13-0:18", "content": "달콤한 전통죽과 수제 디저트는 기본!"}, {"sceneNumber": 5, "originalTimestamp": "0:12-0:17", "content": "아니, 떡볶이랑 크로와상까지?"}, {"sceneNumber": 6,"originalTimestamp": "0:15-0:20", "content": "죽의 신세계가 궁금하다면? 정기운 백련죽집으로!"}]}
     2) 2) "originalTimestamp":"a-b"라 하면 b가 무조건 존재하게 해줘
 
-  key: AIzaSyAzGqHSTpzr_MhZzdHEqkZDOgzzcahUSPU
-
-
-google:
-  cloud:
-    key: classpath:TTS_Key/google-tts-key.json
+  key:
