--- a/LIV-SI_MINSEO/src/main/resources/application.yml
+++ b/LIV-SI_MINSEO/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
 
   datasource:
     url: jdbc:mysql://localhost:3306/livsitest
-    username: root
-    password: "0409"
+    username: livsi
+    password: "1q2w3e4r"
 
   jpa:
     hibernate:
