--- a/LIV-SI_MINSEO/build.gradle
+++ b/LIV-SI_MINSEO/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 	implementation 'be.tarsos.dsp:core:2.5'
 	implementation 'be.tarsos.dsp:jvm:2.5'
 	implementation 'com.google.cloud:google-cloud-texttospeech:2.6.0'
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 }
 
 tasks.named('test') {
