--- a/LIV-SI_MINSEO/src/main/resources/application.yml
+++ b/LIV-SI_MINSEO/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: VideoAnalyze2
 
   datasource:
-    url: jdbc:mysql://localhost:3306/livsitest
+    url: jdbc:mysql://liv-si-database.cluwsicaobn4.ap-northeast-2.rds.amazonaws.com:3306/livsi
     username: livsi
     password: "1q2w3e4r"
 
